[package]
name = "courtlistener-worker"
version = "4.4.0"
edition = "2021"
authors = ["CourtListener Worker Contributors"]
description = "Rust library for the CourtListener API with complete type definitions and Cloudflare Worker support"
license = "MIT"
repository = "https://github.com/drengskapur/courtlistener-worker"
keywords = ["courtlistener", "legal", "api", "cloudflare", "worker", "rust", "library"]
categories = ["web-programming", "api-bindings"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core library dependencies (always included)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20", features = ["derive"] }
regex = "1.10"

# Worker-specific dependencies (optional feature)
# Note: worker crate must be available for proc macros to work
worker = { version = "0.7.2", optional = true }
scalar_api_reference = { version = "0.1.0", optional = true }

[features]
default = ["worker"]
worker = ["dep:worker", "dep:scalar_api_reference"]
# Ensure proc macros are available when worker feature is enabled

[profile.release]
opt-level = "z"
lto = true

[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1.10"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_test = "1.0"
