[package]
name = "courtlistener-worker-bin"
version = "4.4.0"
edition = "2021"
authors = ["CourtListener Worker Contributors"]
description = "Binary crate for deploying CourtListener Worker to Cloudflare"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
courtlistener-worker = { path = "..", features = ["worker"] }
worker = "0.7.1"

